# GhostTrace

./: .gitignore  CITATION.cff  CLAIM_LEDGER.md  CONTRIBUTING.md  DATASET_CARD.md  README.md  SECURITY.md  pyproject.toml  requirements-cloud.txt
.github/workflows/: artifact-integrity.yml
configs/: _base.yaml
configs/tier1/: pilot_mnist.yaml
configs/tier2/: pilot_llama1b_numbers.yaml  qwen25_7b_cat_singlehop.yaml  qwen35_9b_cat_extension.yaml
data/owl_teacher/: README.md  train.jsonl  valid.jsonl
docs/: CUDA_REPRODUCTION_BRIEF.md  LOCAL_BOUNDARY_ANALYSIS.md  OPEN_RESEARCH_REGISTER.md  PRE_REGISTRATION.md  QWEN_CUDA_RUNBOOK.md  RELATED_WORK_MAP.md  RELEASE_READINESS.md  REPRODUCIBILITY.md  RUN_LOG.md  SAFETY_PROTOCOL.md  SOURCE_MAP.md
ghosttrace/: __init__.py  __main__.py  cli.py  config.py  provenance.py  seeding.py  types.py
ghosttrace/channels/: base.py  code.py  mnist_logits.py  numbers.py
ghosttrace/cloud/: __init__.py  qwen_cuda.py
paper/: the_behavioral_half_life.md
reports/: ARTIFACT_MANIFEST.json
scripts/: analyze_chain.py  build_artifact_manifest.py  chain_llm.py  chain_toy.py  debug_scorer.py  log_gate.py  owl_teacher_data.py  phase_diagram.py  phase_figure.py  pilot_a.py  pilot_a_faithful.py  pilot_a_full.py  pilot_a_kl.py  pilot_b_ftteacher.py  pilot_b_gate.py  probe_14b.py  qwen_cuda_gate.py  qwen_mlx_gate.py  smoke_llm_hop.py  validate_scorer.py  verify_public_state.py
tests/: test_channels.py  test_contract.py  test_eval.py  test_models_finetune.py  test_qwen_cuda.py  test_qwen_mlx.py  test_report_viz.py  test_stats.py
(+73 files in other folders)
